removed index.html, fixed bug in get request, fixed nodemon

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server/lib/index.js",
     "scripts": {
         "build:server": "babel ./server/src -d ./server/lib",
-        "dev": "source ENV_VAR && concurrently -k \"npm run watch:server\" \"nodemon --watch server/lib --delay 1\"",
+        "dev": "concurrently -k \"npm run watch:server\" \"nodemon --watch server/lib --delay 1\"",
         "prepare": "npm run build:server",
         "start": "npm run build:server && npm run start:server",
         "start:server": "node server/lib/index.js",
