--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express": "^4.16.2",
         "isomorphic-fetch": "^2.2.1",
         "morgan": "^1.9.0",
+        "multer": "^1.3.0",
         "mysql": "^2.15.0",
         "passport": "^0.4.0",
         "passport-http-bearer": "^1.0.1",
