--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "Leavitt, Norton, Pierson",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.206.0",
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
@@ -24,6 +25,7 @@
         "isomorphic-fetch": "^2.2.1",
         "morgan": "^1.9.0",
         "multer": "^1.3.0",
+        "multer-s3": "^2.7.0",
         "mysql": "^2.15.0",
         "passport": "^0.4.0",
         "passport-http-bearer": "^1.0.1",
