--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "bcrypt": "^1.0.3",
         "express": "^4.16.2",
         "isomorphic-fetch": "^2.2.1",
