--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "watch:server": "babel ./server/src -w -d ./server/lib"
     },
     "author": "Leavitt, Norton, Pierson",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "aws-sdk": "^2.206.0",
         "babel-cli": "^6.26.0",
